--- a/upload-blocks/themes/uc-minimal/index.css
+++ b/upload-blocks/themes/uc-minimal/index.css
@@ -601,14 +601,16 @@ uc-external-source .selected-counter {
 uc-upload-list {
   display: grid;
   transition: opacity var(--ui-transition)
+  overflow: hidden;
 }
 
 uc-upload-list:not([active]) {
-  display: none
+  display: none;
 }
 
 uc-upload-list .files {
-  display: grid
+  display: grid;
+  overflow: auto;
 }
 
 uc-upload-list .toolbar {
